Add desktop view

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet">
   <!-- Local styles -->
   <link rel="stylesheet" href="css/style.css">
 
@@ -24,8 +24,11 @@
 <body>
   <main>
   <div class="maincont">
-    <img class="img1" src="images/illustration-woman-online-mobile.svg" alt="">
-    <img class="img2" src="images/bg-pattern-mobile.svg" alt="">
+    <div class="img3"></div>
+    <div class="images">
+      <div class="img1"></div>
+      <div class="img2"></div>
+   </div>
     <h1 class="heading">FAQ</h1>
     <div class="contbox">
 
