--- a/index.html
+++ b/index.html
@@ -36,33 +36,38 @@
       <p class="Q1">How many team members can I invite?</p>
       <p>You can invite up to 2 additional users on the Free plan. There is no limit on 
       team members for the Premium plan.</p>
-      <input type="checkbox" class="checkbox b1">
+      <label for="c1"></label>
+      <input type="checkbox" class="checkbox b1" id="c1">
       <img src="images/icon-arrow-down.svg" alt="not found" class="arrow">
     </div>
     <div class="box">
       <p class="Q2">What is the maximum file upload size?</p>
       <p>No more than 2GB. All files in your account must fit your allotted storage space.</p>
-      <input type="checkbox" class="checkbox b2">
+      <label for="c2"></label>
+      <input type="checkbox" class="checkbox b2" id="c2">
       <img src="images/icon-arrow-down.svg" alt="not found" class="arrow">
     </div>
     <div class="box">
       <p class="Q3">How do I reset my password?</p>
       <p>Click “Forgot password” from the login page or “Change password” from your profile page.
       A reset link will be emailed to you.</p>
-      <input type="checkbox" class="checkbox b3">
+      <label for="c3"></label>
+      <input type="checkbox" class="checkbox b3" id="c3">
       <img src="images/icon-arrow-down.svg" alt="not found" class="arrow">
     </div>
     <div class="box">
       <p class="Q4">Can I cancel my subscription?</p>
       <p>Yes! Send us a message and we’ll process your request no questions asked.</p>
-      <input type="checkbox" class="checkbox b4">
+      <label for="c4"></label>
+      <input type="checkbox" class="checkbox b4" id="c4">
       <img src="images/icon-arrow-down.svg" alt="not found" class="arrow">
     </div>
  
     <div class="box">
       <p class="Q5">Do you provide additional support?</p>
       <p>Chat and email support is available 24/7. Phone lines are open during normal business hours.</p>
-      <input type="checkbox" class="checkbox b5">
+      <label for="c5"></label>
+      <input type="checkbox" class="checkbox b5" id="c5">
       <img src="images/icon-arrow-down.svg" alt="not found" class="arrow">
     </div>
 
